--- a/_pages/finnish-market.html
+++ b/_pages/finnish-market.html
@@ -1,3 +1,13 @@
+---
+permalink: "finnish-market"
+title: "Finnish Electricity Market"
+author_profile: true
+redirect_from: 
+  - /finnish-market/
+  - /finnish-market.html
+---
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,18 +29,6 @@
     </style>
 </head>
 <body>
-    <!-- Front Matter -->
-    <div id="front-matter">
-        <p>permalink: "finnish-electricity-market"</p>
-        <p>title: "Finnish Electricity Market"</p>
-        <p>author_profile: true</p>
-        <p>redirect_from:</p>
-        <ul>
-            <li>/finnish-market/</li>
-            <li>/finnish-market.html</li>
-        </ul>
-    </div>
-
     <!-- Content -->
     <h1>Finnish Electricity Market</h1>
     <p>This page gives an overview of the Finnish electricity market.</p>
